--- a/css/toypic.css
+++ b/css/toypic.css
@@ -1,4 +1,4 @@
-/*@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700); */
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 h1 {
 	text-align: center;
