--- a/css/toypic.css
+++ b/css/toypic.css
@@ -21,6 +21,11 @@ button:focus { outline: none; outline-width: 0 ; box-shadow: none ;}
 	margin-bottom: 10px;
 }
 
+.gift > .giftcontainer {
+background-color: rgba(255,255,255,0.9);
+	margin: 30px;
+}
+
 .home > .container.last {
 	padding: 0;
 	margin-top: -10px;
@@ -93,6 +98,17 @@ margin-left: 10px;
 }
 
 
+.btn-primary {
+color: #222 !important;
+background-color: #38B086;
+border-color: #1A7757;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+color: #222 !important;
+background-color: #FCF63C;
+border-color: #fff;
+}
 
 .home-toy-footer {
 	min-height: 300px;
@@ -151,7 +167,6 @@ letter-spacing: -0.05em;
 
 
 
-
 body { 
 	font-family: "montserrat" ; 
 	font-weight: 700;
@@ -160,13 +175,14 @@ body {
 }
 
 .gift {
-	border: solid 10px #62d9b0 ;
+	background: url(../img/bg.jpg);
+	border: solid 10px #62d9b0 ; 
 }
 
 .gift .smallogo {
 	position: absolute;
-	top: 25px;
-	left: 25px;
+	top: 53px;
+	left: 55px;
 }
 
 .gift .smallogo img {
@@ -180,7 +196,7 @@ body {
 
 
 .gift .gifts-header h1 {
-	font-size: 70px;
+	font-size: 60px;
 	margin: 0;
 	font-weight: 700;
 	margin-top: 30px;
@@ -202,7 +218,7 @@ body {
 }
 
 .gift .gift-choices img {
-	padding: 40px;
+	padding: 2.5%;
 	border: solid 10px white;
 }
 
@@ -278,7 +294,8 @@ body {
 }
 
 
-.gift {
+.gift,
+.gift img.picked {
 	-webkit-animation: colorbo 2s infinite ;
 }
 
@@ -343,6 +360,7 @@ body {
   font-weight: bold;
   padding: 5px 40px;
   letter-spacing: -0.05em;
+  margin: 30px auto;
 } 
  
 .btn-view-options:hover, 
