--- a/css/toypic.css
+++ b/css/toypic.css
@@ -181,24 +181,13 @@ body {
 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.home-toy{
+.gift-toy {
+	padding: 10px;
+	margin: 10px;
+	border: 1px solid black;
+	border-radius: 5px;
+}
+.home-toy {
 	padding: 10px;
 	margin: 10px;
 	border: 1px solid black;
