--- a/css/toypic.css
+++ b/css/toypic.css
@@ -22,7 +22,7 @@ button:focus { outline: none; outline-width: 0 ; box-shadow: none ;}
 }
 
 .gift > .giftcontainer {
-background-color: rgba(255,255,255,0.9);
+background-color: rgba(255,255,255,1);
 	margin: 30px;
 }
 
@@ -46,8 +46,11 @@ background-color: rgba(255,255,255,0.9);
 	display: block;
 	margin: auto;
 	padding-right: 50px;
-	width: 350px;
+	width: 450px;
+	float: right;
 }
+
+.clear { clear: both;}
 
 
 h1 {
@@ -67,6 +70,8 @@ width: 180px;
 font-size: 28px;
 padding: 4px 6px;
 margin-left: 10px;
+text-align: center;
+color: ;
 }
 
 .home .refine-area {
@@ -86,6 +91,11 @@ margin-left: 10px;
 	padding: 20px 30px;
 	border-radius: 7px;
 	background-color: #62d9b0;	
+	min-height: 175px;
+}
+
+.home .refine-area > div {
+	margin-left: 0;
 }
 
 
@@ -215,6 +225,7 @@ body {
 	width: 25%;
 	margin: auto;
 	display: inline-block;
+	background: white;
 }
 
 .gift .gift-choices img {
