--- a/css/toypic.css
+++ b/css/toypic.css
@@ -107,6 +107,32 @@ color: ;
 	margin-bottom: 18px;
 }
 
+.home .refine-area .btn-group label {
+	font-size: 20px;
+}
+
+.age {
+display: inline-block;
+padding: 6px 12px;
+margin-bottom: 0;
+font-size: 20px;
+font-weight: normal;
+line-height: 1.42857143;
+text-align: center;
+white-space: nowrap;
+vertical-align: middle;
+-ms-touch-action: manipulation;
+touch-action: manipulation;
+-webkit-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
+background-image: none;
+border: 1px solid transparent;
+border-radius: 4px;
+float: left;
+position: relative;
+}
 
 .btn-primary {
 color: #222 !important;
