--- a/css/toypic.css
+++ b/css/toypic.css
@@ -199,6 +199,7 @@ letter-spacing: -0.05em;
 .home-search-results {
 	min-height: 100px;
 	text-align: center;
+	background: white;
 }
 
 
@@ -364,18 +365,64 @@ body {
 	border: 1px solid black;
 	border-radius: 5px;
 }
+
+
+.select9 { text-align: center ; margin: 0px 0 20px; font-weight: bold ; font-size: 18px}
+
 .home-toy {
 	padding: 10px;
 	margin: 10px;
-	border: 1px solid black;
+	border: 10px solid transparent;
 	border-radius: 5px;
-
+	display: inline-block;
+	float: none;
+	text-align: center;
+	cursor: pointer;
+	position: relative;
+	width: 30%;
+	vertical-align: middle;
+	min-height: 230px;
+	line-height: 200px
 }
 
-.home-toy:hover {
-	border: 3px solid green;
+.home-toy img {
+	display: inline;
+	vertical-align: middle;
 }
 
+.home-toy:hover .keep {
+	display: block;
+}
+
+.home-toy.chosen {
+	border-color: #5cff0c;
+}
+
+.home-toy.chosen:hover .keep {
+	display: none;
+}
+
+.home-toy p { display: none ;}
+
+.home-toy .keep {
+	background: rgba(92,255,12,0.8);
+	color: white;
+	font-size: 30px; 
+	position: absolute;
+	text-align: center;
+	width: 70%;
+	bottom: 27%;
+	left: 15%;
+	margin-top: 20px;
+	padding: 5px 0;
+	display: none;
+	line-height: 100px;
+}
+
+.home-toy .keep:hover {
+	background: rgba(92,255,12,1);
+	text-shadow: 0 0 5px white;
+}
 
 .btn-view-options { 
   color: #B930B5; 
